--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
+
         android:width="1dp"
         android:color="@color/white" />
 
     <solid android:color="#ffffff" />
+
 
     <padding
         android:left="1dp"
@@ -12,4 +14,6 @@
         android:top="1dp" />
 
     <corners android:radius="4dp" />
+    <stroke android:color="@android:color/white"
+        android:width="2dp"/>
 </shape>
