--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -5,7 +5,7 @@
         android:width="1dp"
         android:color="@color/white" />
 
-    <solid android:color="#ffffff" />
+    <solid android:color="#404040" />
 
 
     <padding
