--- a/app/src/main/res/layout/model_task.xml
+++ b/app/src/main/res/layout/model_task.xml
@@ -10,7 +10,7 @@
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardUseCompatPadding="true"
-    card_view:cardBackgroundColor="#FFFFFF"
+    card_view:cardBackgroundColor="#404040"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="3dp"
     card_view:contentPadding="5dp">
@@ -23,7 +23,7 @@
             android:id="@+id/tvTaskTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="@color/grey_white"
             android:textSize="20sp" />
 
         <TextView
